od doma oop objasneto

--- a/marijana/.project
+++ b/marijana/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ParenNeparen2</name>
+	<name>marijana</name>
 	<comment></comment>
 	<projects>
 	</projects>
