--- a/marijana/ParNepar/.project
+++ b/marijana/ParNepar/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ParenNeparen</name>
+	<name>ParNepar</name>
 	<comment></comment>
 	<projects>
 	</projects>
